refactor: 에러 형식 통일
- 에러 형식 error, message를 key값으로 가지도록 통일